# vaccelrt-plugin-template

./: CMakeLists.txt  README.md
src/: pynq.h  vaccel.c
